# ptrace_bug_poc

src/: CMakeLists.txt
src/mt_example/: CMakeLists.txt  main.cpp
src/ptrace_test/: CMakeLists.txt  breakpoint.h  debugger.cpp  debugger.h  helpers.cpp  helpers.h  main.cpp  traced_proc.cpp  traced_proc.h  traced_thread.cpp  traced_thread.h
